Add page object support for mobile elments